#103 Fix content render issue on mobile

--- a/assets/tailwind.output.css
+++ b/assets/tailwind.output.css
@@ -394,6 +394,9 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
+  }
   .h-1\/3 {
     height: calc(1/3 * 100%);
   }
@@ -451,6 +454,18 @@
   .h-\[100vh\] {
     height: 100vh;
   }
+  .h-\[120vh\] {
+    height: 120vh;
+  }
+  .h-\[150vh\] {
+    height: 150vh;
+  }
+  .h-\[180vh\] {
+    height: 180vh;
+  }
+  .h-\[200vh\] {
+    height: 200vh;
+  }
   .h-\[236px\] {
     height: 236px;
   }
@@ -478,6 +493,9 @@
   .min-h-\[500px\] {
     min-height: 500px;
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
@@ -487,11 +505,17 @@
   .w-1\/4 {
     width: calc(1/4 * 100%);
   }
+  .w-2 {
+    width: calc(var(--spacing) * 2);
+  }
   .w-2\/3 {
     width: calc(2/3 * 100%);
   }
   .w-2\/4 {
     width: calc(2/4 * 100%);
+  }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
   }
   .w-3\/4 {
     width: calc(3/4 * 100%);
@@ -531,6 +555,9 @@
   }
   .flex-1 {
     flex: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .-translate-x-\[45vw\] {
     --tw-translate-x: calc(45vw * -1);
@@ -835,6 +862,9 @@
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
+  }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
   }
@@ -864,6 +894,9 @@
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
+  }
+  .pb-40 {
+    padding-bottom: calc(var(--spacing) * 40);
   }
   .pb-40\! {
     padding-bottom: calc(var(--spacing) * 40) !important;
@@ -989,6 +1022,9 @@
   }
   .no-underline {
     text-decoration-line: none;
+  }
+  .underline {
+    text-decoration-line: underline;
   }
   .placeholder-gray-500 {
     &::placeholder {
@@ -1392,6 +1428,21 @@
   .md\:h-\[40vh\] {
     @media (width >= 48rem) {
       height: 40vh;
+    }
+  }
+  .md\:h-\[50vh\] {
+    @media (width >= 48rem) {
+      height: 50vh;
+    }
+  }
+  .md\:h-\[80vh\] {
+    @media (width >= 48rem) {
+      height: 80vh;
+    }
+  }
+  .md\:h-\[100vh\] {
+    @media (width >= 48rem) {
+      height: 100vh;
     }
   }
   .md\:h-\[300px\] {
